--- a/ProyectoFinal/style.css
+++ b/ProyectoFinal/style.css
@@ -44,7 +44,7 @@ main {
 }
 
 .bpm-text {
-    font-size: 56px;
+    font-size: 30px;
 }
 
 #bpm-numero {
@@ -98,3 +98,52 @@ main {
     background: linear-gradient(145deg, #194e61, #297c9b);
     box-shadow:  8px 8px 16px #194e61,-8px -8px 16px #297c9b;
 }
+
+#boton-play {
+    width: 64px;
+    height: 64px;
+}
+
+#beats-container {
+    border-radius: 10px;
+    background: #292c30;
+    padding: 0 4px;
+    height: 28px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.beatInactivo {
+    width: 18px;
+    height: 18px;
+    background: linear-gradient(145deg, #5d5d5d, #4e4e4e);
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+}
+
+.beatActivo {
+    width: 20px;
+    height: 20px;
+    background: linear-gradient(145deg, #888888, #808080);
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+}
+
+#boton-guardar {
+    min-width: 56px;
+    min-height: 36px;
+    background: #292c30;
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+    margin: 0 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+#boton-guardar:hover {
+    background: linear-gradient(145deg, #194e61, #297c9b);
+    box-shadow:  8px 8px 16px #174c5f,-8px -8px 16px #297c9b;
+
+}
+
