--- a/ProyectoFinal/style.css
+++ b/ProyectoFinal/style.css
@@ -147,3 +147,139 @@ main {
 
 }
 
+.botonesAvanzados {
+    padding-top: 24px;
+    display: flex;
+}
+
+#botonConfig {
+    min-width: 56px;
+    min-height: 36px;
+    border-radius: 10px;
+    background: #292c30;
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+    margin: 0 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+#botonConfig:hover {
+    border-radius: 50px;
+    background: linear-gradient(145deg, #194e61, #297c9b);
+    box-shadow:  8px 8px 16px #174c5f,-8px -8px 16px #297c9b;
+}
+
+/* BUSCADOR API */
+
+.contenedorConfig {
+    width: 100vw;
+    height: 80vh;
+    border-radius: 36px 36px 0 0;
+    z-index: 999;
+    background: #292c30;
+    padding: 48px;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    display: none;
+    overflow: scroll;
+}
+
+.contenedorCerrar {
+    display: flex;
+    justify-content: end;
+}
+
+#botonCerrar {
+    width: 24px;
+    height: 24px;
+    border-radius: 50px;
+    background: #292c30;
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+    margin: 0 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+}
+
+.formBusqueda {
+    height: 80px;
+}
+
+#buscador {
+    display: flex;
+    justify-content: center;
+}
+
+#campoBusqueda {
+    border-radius: 10px;
+    background: #292c30;
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+    padding: 12px;
+    width: 220px;
+    border: none;
+}
+
+#botonBuscar {
+    min-width: 100px;
+    min-height: 36px;
+    border-radius: 50px;
+    background: #292c30;
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+    margin: 0 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border: none;
+}
+
+.contenedorResultados {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+
+.cardResultado {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 8px;
+    padding: 16px;
+    border-radius: 24px;
+    background: #292c30;
+    box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
+}
+
+.cover {
+    max-width: 90px;
+    max-height: 90px;
+    border-radius: 20px;
+}
+
+.bpmCard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 8px;
+    margin: 0px;
+}
+
+.bpmCancion {
+    font-size: 32px;
+    display: inline;
+}
+
+.textoBPMCard {
+    font-size: 16px;
+}
