--- a/ProyectoFinal/style.css
+++ b/ProyectoFinal/style.css
@@ -138,7 +138,6 @@ main {
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    border-radius: 10px;
 }
 
 #boton-guardar:hover {
@@ -147,15 +146,14 @@ main {
 
 }
 
-.botonesAvanzados {
+.botones-avanzados {
     padding-top: 24px;
     display: flex;
 }
 
-#botonConfig {
+#boton-config {
     min-width: 56px;
     min-height: 36px;
-    border-radius: 10px;
     background: #292c30;
     box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
     margin: 0 24px;
@@ -165,15 +163,14 @@ main {
     font-size: 20px;
 }
 
-#botonConfig:hover {
-    border-radius: 50px;
+#boton-config:hover {
     background: linear-gradient(145deg, #194e61, #297c9b);
     box-shadow:  8px 8px 16px #174c5f,-8px -8px 16px #297c9b;
 }
 
 /* BUSCADOR API */
 
-.contenedorConfig {
+.contenedor-config {
     width: 100vw;
     height: 80vh;
     border-radius: 36px 36px 0 0;
@@ -188,12 +185,12 @@ main {
     overflow: scroll;
 }
 
-.contenedorCerrar {
+.contenedor-cerrar {
     display: flex;
     justify-content: end;
 }
 
-#botonCerrar {
+#boton-cerrar {
     width: 24px;
     height: 24px;
     border-radius: 50px;
@@ -206,7 +203,12 @@ main {
     font-size: 12px;
 }
 
-.formBusqueda {
+#boton-cerrar:hover {
+    background: linear-gradient(145deg, #194e61, #297c9b);
+    box-shadow:  8px 8px 16px #174c5f,-8px -8px 16px #297c9b;
+}
+
+.form-busqueda {
     height: 80px;
 }
 
@@ -215,16 +217,22 @@ main {
     justify-content: center;
 }
 
-#campoBusqueda {
+#campo-busqueda {
     border-radius: 10px;
     background: #292c30;
     box-shadow: inset 4px 4px 6px #194e61, inset -4px -4px 6px #194e61;
     padding: 12px;
     width: 220px;
     border: none;
+    
 }
 
-#botonBuscar {
+#campo-busqueda::placeholder {
+    color: #47a5c8;
+}
+
+
+#boton-buscar {
     min-width: 100px;
     min-height: 36px;
     border-radius: 50px;
@@ -238,7 +246,12 @@ main {
     border: none;
 }
 
-.contenedorResultados {
+#boton-buscar:hover{
+    background: linear-gradient(145deg, #194e61, #297c9b);
+    box-shadow:  8px 8px 16px #174c5f,-8px -8px 16px #297c9b;
+}
+
+.contenedor-resultados {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -247,7 +260,7 @@ main {
 }
 
 
-.cardResultado {
+.card-resultado {
     width: 320px;
     display: flex;
     flex-direction: column;
@@ -267,7 +280,7 @@ main {
     border-radius: 20px;
 }
 
-.bpmCard {
+.bpm-card {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -275,11 +288,11 @@ main {
     margin: 0px;
 }
 
-.bpmCancion {
+.bpm-cancion {
     font-size: 32px;
     display: inline;
 }
 
-.textoBPMCard {
+.texto-bpm-Card {
     font-size: 16px;
 }
